[gd_scene load_steps=3 format=3 uid="uid://dbl2malqgknyt"]

[ext_resource type="Script" path="res://scripts/ui/map_selection.gd" id="1_dy4tp"]
[ext_resource type="Texture2D" uid="uid://ogfhy30htlcf" path="res://assets/ui/map_selection/map_selection_background.png" id="2_lfto3"]

[node name="MapSelection" type="Node2D"]
visible = false
script = ExtResource("1_dy4tp")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_lfto3")
centered = false

[node name="Map1Button" type="Button" parent="."]
offset_left = 218.0
offset_top = 508.0
offset_right = 762.0
offset_bottom = 968.0

[node name="Map2Button" type="Button" parent="."]
offset_left = 850.0
offset_top = 494.0
offset_right = 1324.0
offset_bottom = 953.0

[node name="Map3Button" type="Button" parent="."]
offset_left = 1394.0
offset_top = 464.0
offset_right = 1876.0
offset_bottom = 921.0

[node name="BackButton" type="Button" parent="."]
offset_left = 21.0
offset_top = 41.0
offset_right = 240.0
offset_bottom = 124.0

[connection signal="button_up" from="Map1Button" to="." method="_on_map_1_button_up"]
[connection signal="button_up" from="Map2Button" to="." method="_on_map_2_button_up"]
[connection signal="button_up" from="Map3Button" to="." method="_on_map_3_button_up"]
[connection signal="button_up" from="BackButton" to="." method="_on_back_button_up"]
